Fix minor alignment issue in workorder view

--- a/src/components/queue.css
+++ b/src/components/queue.css
@@ -166,6 +166,7 @@ body {
 
 .description-container-hist {
   margin-bottom: 2rem;
+  padding: 1rem;
 }
 
 .queue-workorder-box-hist {
